--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,11 @@
   </parent>
 
   <properties>
-    <com.fasterxml.jackson.version>2.10.3</com.fasterxml.jackson.version>
+    <com.fasterxml.jackson.version>2.10.5</com.fasterxml.jackson.version>
+    <com.fasterxml.jackson.databind.version>2.10.5.1</com.fasterxml.jackson.databind.version>
     <org.bouncycastle.version>1.66</org.bouncycastle.version>
     <org.jsoup.jsoup.version>1.13.1</org.jsoup.jsoup.version>
-    <org.apache.httpcomponents.version>4.5.12</org.apache.httpcomponents.version>
+    <org.apache.httpcomponents.version>4.5.13</org.apache.httpcomponents.version>
     <org.apache.commons.configuration2.version>2.7</org.apache.commons.configuration2.version>
     <commons.beanutils.version>1.9.4</commons.beanutils.version>
     <io.projectreactor.version>3.3.9.RELEASE</io.projectreactor.version>
@@ -167,7 +168,7 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>${com.fasterxml.jackson.version}</version>
+        <version>${com.fasterxml.jackson.databind.version}</version>
       </dependency>
 
       <dependency>
